--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,9 +1,100 @@
 pipeline {
     agent any
+
+    environment {
+        MAVEN_HOME = "C:/Program Files/Maven/apache-maven-3.9.9" // Replace with actual Maven path
+        PATH = "${MAVEN_HOME}/bin;${env.PATH}" // Add Maven to PATH for Windows
+        EMAIL_RECIPIENT = "ssgulluoglu@gmail.com" // Replace with actual recipient email
+    }
+
     stages {
-        stage('Build') { 
+        stage('Build') {
             steps {
-                sh 'mvn -B -DskipTests clean package' 
+                echo 'Building the application...'
+                bat '"${MAVEN_HOME}\\bin\\mvn" clean package'
+            }
+        }
+
+        stage('Unit and Integration Tests') {
+            steps {
+                echo 'Running Unit and Integration Tests...'
+                bat '"${MAVEN_HOME}\\bin\\mvn" test'
+            }
+            post {
+                always {
+                    junit '**/target/surefire-reports/*.xml'
+                }
+                success {
+                    emailext (
+                        to: "${env.EMAIL_RECIPIENT}",
+                        subject: "Jenkins Pipeline - Tests SUCCESS",
+                        body: "The Unit and Integration Tests completed successfully.",
+                        attachLog: true
+                    )
+                }
+                failure {
+                    emailext (
+                        to: "${env.EMAIL_RECIPIENT}",
+                        subject: "Jenkins Pipeline - Tests FAILURE",
+                        body: "The Unit and Integration Tests failed. Check the logs for details.",
+                        attachLog: true
+                    )
+                }
+            }
+        }
+
+        stage('Code Analysis') {
+            steps {
+                echo 'Running Code Analysis with SonarQube...'
+                withSonarQubeEnv('SonarQube') {
+                    bat '"${MAVEN_HOME}\\bin\\mvn" sonar:sonar'
+                }
+            }
+        }
+
+        stage('Security Scan') {
+            steps {
+                echo 'Running Security Scan with OWASP Dependency-Check...'
+                bat '"${MAVEN_HOME}\\bin\\mvn" org.owasp:dependency-check-maven:check'
+            }
+            post {
+                success {
+                    emailext (
+                        to: "${env.EMAIL_RECIPIENT}",
+                        subject: "Jenkins Pipeline - Security Scan SUCCESS",
+                        body: "The Security Scan completed successfully.",
+                        attachLog: true
+                    )
+                }
+                failure {
+                    emailext (
+                        to: "${env.EMAIL_RECIPIENT}",
+                        subject: "Jenkins Pipeline - Security Scan FAILURE",
+                        body: "The Security Scan failed. Check the logs for details.",
+                        attachLog: true
+                    )
+                }
+            }
+        }
+
+        stage('Deploy to Staging') {
+            steps {
+                echo 'Deploying to Staging Environment...'
+                bat 'aws deploy --application-name my-app --deployment-group staging --s3-location s3://my-bucket/app.zip'
+            }
+        }
+
+        stage('Integration Tests on Staging') {
+            steps {
+                echo 'Running Integration Tests on Staging...'
+                bat '"${MAVEN_HOME}\\bin\\mvn" verify'
+            }
+        }
+
+        stage('Deploy to Production') {
+            steps {
+                echo 'Deploying to Production Environment...'
+                bat 'aws deploy --application-name my-app --deployment-group production --s3-location s3://my-bucket/app.zip'
             }
         }
     }
