--- a/JenkinsFile
+++ b/JenkinsFile
@@ -52,7 +52,7 @@ pipeline {
             steps {
                 echo 'Running Code Analysis with SonarQube...'
                 // Correct bat command
-                withSonarQubeEnv('sonarqube') {
+                withSonarQubeEnv('SonarQubeServer') {
                     bat "\"%MAVEN_HOME%\\bin\\mvn\" sonar:sonar"
                 }
             }
